fixy / poprawki przed wdrozeniem live

--- a/src/app/_components/home-page/_components/hero/hero.html
+++ b/src/app/_components/home-page/_components/hero/hero.html
@@ -3,10 +3,10 @@
     <div class="grid flex-column">
       <div class="xlg:col-6 col-12">
       <h1>1, 2, 3...</h1>
-      <h1 class="mb-5">Jeździsz <span>TY!</span></h1>
+      <h1 class="xl:mb-5 mb-3">Jeździsz <span>TY!</span></h1>
       <h2>flexmile - Nowe Auta dla firm w najmie!</h2>
-      <h2 class="mb-5">Z niską ratą! Bez wpłaty! Na START!</h2>
-      <div class="mb-7">
+      <h2 class="xl:mb-5 mb-3">Z niską ratą! Bez wpłaty! Na START!</h2>
+      <div class="xl:mb-7 mb-0">
         <flexmile-button (clicked)="goToOffer()" label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right" btnClass="mr-0 xlg:mr-3 w-full xlg:w-auto mb-3 xlg:mb-0"></flexmile-button>
         <flexmile-button (clicked)="goToSection('how-it-works')" label="Jak to działa?" color="outline" btnClass="w-full xlg:w-auto"></flexmile-button>
       </div>
