--- a/src/app/_components/home-page/_components/opinions/opinions.html
+++ b/src/app/_components/home-page/_components/opinions/opinions.html
@@ -27,7 +27,7 @@
             </svg>
           </div>
           <h2>Zaufali nam kierowcy <br>z całej Polski!</h2>
-          <span>W Flexmile stawiamy na wygodę, przejrzystość i partnerskie podejście. <br>Dlatego tak wielu klientów wraca do nas lub poleca nas dalej. Cenią <br>nowoczesny sposób wynajmu, który pozwala cieszyć się nowym autem bez <br>obciążających formalności.</span>
+          <span>W Flexmile stawiamy na wygodę, przejrzystość i partnerskie podejście. <br>Dlatego tak wielu klientów wraca do nas lub poleca nas dalej. Cenią <br>nowoczesny sposób wynajmu, który pozwala cieszyć się nowym autem bez <br>praktycznie od razu!</span>
         </div>
       </div>
     </div>
