--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -1,11 +1,11 @@
 <flexmile-hero></flexmile-hero>
 <div class="container">
-  <div class="home-offers pt-7">
+  <div class="home-offers xl:pt-7 pt-4">
     <div class="home-offers--header flex align-items-start justify-content-between pb-5">
       <div class="home-offers--header-left">
         <h2 class="mb-3">Nowe samochody od Flexmile!</h2>
         <span
-          class="inline xxl:block">Tylko stała miesięczna rata – bez dodatkowych kosztów za ubezpieczenie, serwis czy opony.</span>
+          class="inline xxl:block">Tylko stała miesięczna rata! Wybierz nowy samochód i ciesz się pełnym komfortem jazdy, bez niespodzianek i ukrytych opłat!</span>
         <span
           class="inline xxl:block">Wybierz nowy samochód i ciesz się pełnym komfortem jazdy bez niespodzianek i ukrytych opłat.</span>
       </div>
