--- a/public/layout/scss/_main.scss
+++ b/public/layout/scss/_main.scss
@@ -129,9 +129,10 @@ h2 {
       display: grid;
       grid-template-columns: repeat(3, minmax(0, 1fr));
       gap: 32px;
-
+      align-items: stretch;
       .product {
         min-width: 0;
+
       }
 
       .banner {
