--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -14,24 +14,30 @@
             <div class="offer__body xlg:pb-7 pb-4">
               <div class="offer__body-info xxl:pr-7">
                 <div class="offer__body-info-header">
-                  <div class="flex align-items-center justify-content-between pb-2">
+                  <div class="flex xxxl:align-items-center align-items-start justify-content-between pb-2 xxxl:flex-row flex-column">
                     <h1>{{ details().brand.name }} {{ details().model }}</h1>
                     @if (!screen.isMobile()) {
-                      @if (!details().available) {
-                        <flexmile-badge [type]="badgeTypes.RESERVED" [size]="badgeSizes.LG"></flexmile-badge>
-                      } @else {
-                        @if (details().attributes.available_immediately) {
-                          <flexmile-badge [type]="badgeTypes.AVAILABLE" [size]="badgeSizes.LG"></flexmile-badge>
+                      <div class="flex gap-2">
+                        @if (details().attributes.new) {
+                          <flexmile-badge [type]="badgeTypes.AVAILABLE" [label]="'Nowy samochód!'"
+                                          [size]="badgeSizes.LG"></flexmile-badge>
                         }
-                        @if (details().attributes.coming_soon) {
-                          <flexmile-badge [type]="badgeTypes.SOON" [size]="badgeSizes.LG"
-                                          [date]="details().coming_soon_date"></flexmile-badge>
+                        @if (!details().available) {
+                          <flexmile-badge [type]="badgeTypes.RESERVED" [size]="badgeSizes.LG"></flexmile-badge>
+                        } @else {
+                          @if (details().attributes.available_immediately) {
+                            <flexmile-badge [type]="badgeTypes.AVAILABLE" [size]="badgeSizes.LG"></flexmile-badge>
+                          }
+                          @if (details().attributes.coming_soon) {
+                            <flexmile-badge [type]="badgeTypes.SOON" [size]="badgeSizes.LG"
+                                            [date]="details().coming_soon_date"></flexmile-badge>
+                          }
                         }
-                      }
+                      </div>
                     }
                   </div>
                   <span class="block pb-3">
-              {{ details().specs.engine ? details().specs.engine + ', ' : '' }}{{ details().specs.engine_capacity }} cm³
+              {{ details().specs.engine }}
             </span>
                   <div class="offer__body-info-header-specs flex align-items-center pb-3">
                     <div>
@@ -59,21 +65,27 @@
                           d="M8.4375 7.5C8.4375 8.04688 8.00781 8.4375 7.5 8.4375C6.95312 8.4375 6.5625 8.04688 6.5625 7.5C6.5625 6.99219 6.95312 6.5625 7.5 6.5625C8.00781 6.5625 8.4375 6.99219 8.4375 7.5ZM10.3125 7.5C10.3125 6.99219 10.7031 6.5625 11.25 6.5625C11.7578 6.5625 12.1875 6.99219 12.1875 7.5C12.1875 8.04688 11.7578 8.4375 11.25 8.4375C10.7031 8.4375 10.3125 8.04688 10.3125 7.5ZM15.9375 7.5C15.9375 8.04688 15.5078 8.4375 15 8.4375C14.4531 8.4375 14.0625 8.04688 14.0625 7.5C14.0625 6.99219 14.4531 6.5625 15 6.5625C15.5078 6.5625 15.9375 6.99219 15.9375 7.5ZM16.25 0.625C16.25 0.976562 15.9375 1.25 15.625 1.25H12.5V2.5H15.4688C15.9766 2.5 16.4453 2.65625 16.875 2.92969L18.8672 4.25781C19.5703 4.72656 20 5.50781 20 6.36719V12.5C20 13.9062 18.8672 15 17.5 15H9.92188C9.17969 15 8.4375 14.6875 7.96875 14.0625L6.71875 12.5H5.625C4.57031 12.5 3.75 11.6797 3.75 10.625V8.125H1.25V11.25C1.25 11.6016 0.9375 11.875 0.625 11.875C0.273438 11.875 0 11.6016 0 11.25V3.75C0 3.4375 0.273438 3.125 0.625 3.125C0.9375 3.125 1.25 3.4375 1.25 3.75V6.875H3.75V4.375C3.75 3.35938 4.57031 2.5 5.625 2.5H11.25V1.25H8.125C7.77344 1.25 7.5 0.976562 7.5 0.625C7.5 0.3125 7.77344 0 8.125 0H15.625C15.9375 0 16.25 0.3125 16.25 0.625ZM5.625 3.75C5.27344 3.75 5 4.0625 5 4.375V10.625C5 10.9766 5.27344 11.25 5.625 11.25H7.34375L8.94531 13.2812C9.17969 13.5938 9.57031 13.75 9.92188 13.75H17.5C18.1641 13.75 18.75 13.2031 18.75 12.5V6.36719C18.75 5.9375 18.5156 5.54688 18.1641 5.3125L16.1719 3.98438C15.9766 3.82812 15.7031 3.75 15.4688 3.75H5.625ZM21.25 6.25C21.25 5.58594 21.7969 5 22.5 5H23.75C24.4141 5 25 5.58594 25 6.25V13.75C25 14.4531 24.4141 15 23.75 15H22.5C21.7969 15 21.25 14.4531 21.25 13.75V6.25ZM22.5 13.75H23.75V6.25H22.5V13.75Z"
                           fill="#863087"/>
                       </svg>
-                      {{ details().specs.horsepower }} KM
+                      {{ details().specs.engine_capacity }} cm³ / {{ details().specs.horsepower }} KM
                     </div>
                   </div>
                   @if (screen.isMobile()) {
-                    @if (!details().available) {
-                      <flexmile-badge [type]="badgeTypes.RESERVED" [size]="badgeSizes.LG"></flexmile-badge>
-                    } @else {
-                      @if (details().attributes.available_immediately) {
-                        <flexmile-badge [type]="badgeTypes.AVAILABLE" [size]="badgeSizes.LG"></flexmile-badge>
+                    <div class="flex gap-2">
+                      @if (details().attributes.new) {
+                        <flexmile-badge [type]="badgeTypes.AVAILABLE" [label]="'Nowy samochód!'"
+                                        [size]="badgeSizes.LG"></flexmile-badge>
                       }
-                      @if (details().attributes.coming_soon) {
-                        <flexmile-badge [type]="badgeTypes.SOON" [size]="badgeSizes.LG"
-                                        [date]="details().coming_soon_date"></flexmile-badge>
+                      @if (!details().available) {
+                        <flexmile-badge [type]="badgeTypes.RESERVED" [size]="badgeSizes.LG"></flexmile-badge>
+                      } @else {
+                        @if (details().attributes.available_immediately) {
+                          <flexmile-badge [type]="badgeTypes.AVAILABLE" [size]="badgeSizes.LG"></flexmile-badge>
+                        }
+                        @if (details().attributes.coming_soon) {
+                          <flexmile-badge [type]="badgeTypes.SOON" [size]="badgeSizes.LG"
+                                          [date]="details().coming_soon_date"></flexmile-badge>
+                        }
                       }
-                    }
+                    </div>
                   }
                 </div>
                 <div class="offer__body-gallery">
@@ -85,11 +97,8 @@
             </div>
             @if (screen.isLowerThanTablet()) {
               <div class="offer__body-form">
-                <div class="header-wrapper pb-5 mb-5">
-                  <h3 class="block pb-2">Wybierz ofertę najmu idealną dla Twojej firmy!</h3>
-                  <span>
-            Wypełnij krótki formularz, a nasz doradca skontaktuje się z Tobą. Złożenie zapytania jest bezpłatne i nie stanowi zobowiązania.
-          </span>
+                <div class="header-wrapper pb-4 mb-4">
+                  <h3 class="block">Wybierz ofertę najmu idealną dla Twojej firmy!</h3>
                 </div>
                 <div class="block">
                   <div>
@@ -256,7 +265,8 @@
                         <div class="flex offer--description_item xlg:mb-5 mb-3">
                           <div class="offer--description_item-icon">
                             @if (description.icon) {
-                              <img src="{{description.icon}}" alt="{{details().additional_services[description.id].title}}">
+                              <img src="{{description.icon}}"
+                                   alt="{{details().additional_services[description.id].title}}">
                             }
                           </div>
                           <div class="flex flex-column">
@@ -293,11 +303,8 @@
         @if (!screen.isLowerThanTablet()) {
           <div class="offer-details-container-r">
             <div class="offer__body-form">
-              <div class="header-wrapper pb-5 mb-5">
-                <h3 class="block pb-2">Wybierz ofertę najmu idealną dla Twojej firmy!</h3>
-                <span>
-            Wypełnij krótki formularz, a nasz doradca skontaktuje się z Tobą. Złożenie zapytania jest bezpłatne i nie stanowi zobowiązania.
-          </span>
+              <div class="header-wrapper pb-4 mb-4">
+                <h3 class="block">Wybierz ofertę najmu idealną dla Twojej firmy!</h3>
               </div>
               <div class="block">
                 <div>
