--- a/src/app/_components/utilities/car/car.html
+++ b/src/app/_components/utilities/car/car.html
@@ -25,7 +25,7 @@
   <div class="car-card__content xlg:p-4 p-3">
     <div class="car-card__header mb-2">
       <h3 class="car-card__title">{{ offer().brand.name }} {{ offer().model }}</h3>
-      <p class="car-card__subtitle">{{ offer().engine }}, {{ offer().engine_capacity }} cm³</p>
+      <p class="car-card__subtitle">{{ offer().engine }}</p>
     </div>
 
     <div class="car-card__specs pb-3">
@@ -51,7 +51,7 @@
             d="M11.9375 16.5C11.9375 17.0469 11.5078 17.4375 11 17.4375C10.4531 17.4375 10.0625 17.0469 10.0625 16.5C10.0625 15.9922 10.4531 15.5625 11 15.5625C11.5078 15.5625 11.9375 15.9922 11.9375 16.5ZM13.8125 16.5C13.8125 15.9922 14.2031 15.5625 14.75 15.5625C15.2578 15.5625 15.6875 15.9922 15.6875 16.5C15.6875 17.0469 15.2578 17.4375 14.75 17.4375C14.2031 17.4375 13.8125 17.0469 13.8125 16.5ZM19.4375 16.5C19.4375 17.0469 19.0078 17.4375 18.5 17.4375C17.9531 17.4375 17.5625 17.0469 17.5625 16.5C17.5625 15.9922 17.9531 15.5625 18.5 15.5625C19.0078 15.5625 19.4375 15.9922 19.4375 16.5ZM19.75 9.625C19.75 9.97656 19.4375 10.25 19.125 10.25H16V11.5H18.9688C19.4766 11.5 19.9453 11.6562 20.375 11.9297L22.3672 13.2578C23.0703 13.7266 23.5 14.5078 23.5 15.3672V21.5C23.5 22.9062 22.3672 24 21 24H13.4219C12.6797 24 11.9375 23.6875 11.4688 23.0625L10.2188 21.5H9.125C8.07031 21.5 7.25 20.6797 7.25 19.625V17.125H4.75V20.25C4.75 20.6016 4.4375 20.875 4.125 20.875C3.77344 20.875 3.5 20.6016 3.5 20.25V12.75C3.5 12.4375 3.77344 12.125 4.125 12.125C4.4375 12.125 4.75 12.4375 4.75 12.75V15.875H7.25V13.375C7.25 12.3594 8.07031 11.5 9.125 11.5H14.75V10.25H11.625C11.2734 10.25 11 9.97656 11 9.625C11 9.3125 11.2734 9 11.625 9H19.125C19.4375 9 19.75 9.3125 19.75 9.625ZM9.125 12.75C8.77344 12.75 8.5 13.0625 8.5 13.375V19.625C8.5 19.9766 8.77344 20.25 9.125 20.25H10.8438L12.4453 22.2812C12.6797 22.5938 13.0703 22.75 13.4219 22.75H21C21.6641 22.75 22.25 22.2031 22.25 21.5V15.3672C22.25 14.9375 22.0156 14.5469 21.6641 14.3125L19.6719 12.9844C19.4766 12.8281 19.2031 12.75 18.9688 12.75H9.125ZM24.75 15.25C24.75 14.5859 25.2969 14 26 14H27.25C27.9141 14 28.5 14.5859 28.5 15.25V22.75C28.5 23.4531 27.9141 24 27.25 24H26C25.2969 24 24.75 23.4531 24.75 22.75V15.25ZM26 22.75H27.25V15.25H26V22.75Z"
             fill="#863087"/>
         </svg>
-        <span>{{ offer().horsepower }}KM</span>
+        <span>{{ offer().engine_capacity }} cm³ / {{ offer().horsepower }}KM</span>
       </div>
     </div>
 
@@ -60,26 +60,27 @@
     }
 
     <div class="car-card__price pb-3">
+      <span class="car-card__price-label">już od </span>
       <span class="car-card__price-amount">{{ offer().price_from }}</span>
       <span class="car-card__price-label"> PLN/ netto mies.</span>
     </div>
     @if (cardSize() === badgeSizes.LG) {
-      <div class="btn_wrapper">
+      <div class="btn_wrapper" [ngClass]="{'_p' : checkIfAnyTrue()}">
         <flexmile-button label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
                          btnClass="w-full lg:w-auto"></flexmile-button>
       </div>
     }
-    @if (cardSize() !== badgeSizes.LG) {
+    @if (cardSize() !== badgeSizes.LG && checkIfAnyTrue()) {
       <ng-container *ngTemplateOutlet="offerFeatures"></ng-container>
     }
   </div>
-  @if (cardSize() === badgeSizes.LG) {
+  @if (cardSize() === badgeSizes.LG && checkIfAnyTrue()) {
     <ng-container *ngTemplateOutlet="offerFeatures"></ng-container>
   }
 </div>
 
 <ng-template #offerFeatures>
-  <div class="car-card__features" (click)="showFeatures($event)" [ngClass]="{'opacity-0' : !checkIfAnyTrue()}">
+  <div class="car-card__features" (click)="showFeatures($event)">
     <div class="car-card__feature-label hidden xl:flex">
       Usługi w cenie:
     </div>
@@ -119,7 +120,7 @@
 <ng-template #desktopFeatures>
   @for (f of offerListFeatures; track f) {
     @if (offer().additional_services[f.id].enabled) {
-      <flexmile-tooltip [config]="{text: offer().additional_services[f.id].title, position: 'top'}">
+      <flexmile-tooltip [config]="{text: offer().additional_services[f.id].title, position: 'top', appendTo: 'body'}">
         <div class="car-card__feature-btn flex align-items-center justify-content-center" [innerHTML]="f.icon | sanitize: 'html'">
         </div>
       </flexmile-tooltip>
