--- a/src/app/_components/utilities/list/list.html
+++ b/src/app/_components/utilities/list/list.html
@@ -26,7 +26,7 @@
                   @if (banner) {
                     <div class="banner">
                       <flexmile-banner-list
-                        [separator]="''"
+                        [separator]="'&nbsp;'"
                         [label]="banner.label"
                         [description]="banner.description"
                         position="center">
