--- a/src/app/_components/utilities/list/list.scss
+++ b/src/app/_components/utilities/list/list.scss
@@ -18,7 +18,7 @@
       display: grid;
       grid-template-columns: repeat(3, minmax(0, 1fr));
       gap: 32px;
-
+      align-items: stretch;
       .product,
       .product-full,
       .banner {
