--- a/src/app/_components/utilities/header/header.html
+++ b/src/app/_components/utilities/header/header.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'opened' : mobileMenuState, 'header--scrolled py-4': isScrolled, 'py-5': !isScrolled}"
+<div [ngClass]="{'opened' : mobileMenuState, 'header--scrolled py-4': isScrolled, 'py-4 xl:py-5': !isScrolled}"
      class="flex py-4 px-4 xxxl:px-7 align-items-center justify-content-between header">
   <div class="header--logo cursor-pointer" (click)="goToMainPage()">
       <svg xmlns="http://www.w3.org/2000/svg" id="Warstwa_1" version="1.1" viewBox="0 0 1295.6 239.9">
