zmiany / fixy / poprawki

--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -5,9 +5,7 @@
       <div class="home-offers--header-left">
         <h2 class="mb-3">Nowe samochody od Flexmile!</h2>
         <span
-          class="inline xxl:block">Tylko stała miesięczna rata! Wybierz nowy samochód i ciesz się pełnym komfortem jazdy, bez niespodzianek i ukrytych opłat!</span>
-        <span
-          class="inline xxl:block">Wybierz nowy samochód i ciesz się pełnym komfortem jazdy bez niespodzianek i ukrytych opłat.</span>
+          class="inline xxl:block">Tylko stała miesięczna rata! Wybierz nowy samochód, ciesz się pełnym komfortem jazdy, <br>bez niespodzianek i ukrytych opłat!</span>
       </div>
       <div class="home-offers--heade-right hidden xl:flex">
         <flexmile-link title="Pokaż pełną ofertę" url="/oferty" icon="pi-arrow-right"
