--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -293,7 +293,7 @@
                 }
                 <div>
                   <flexmile-banner-list size="small" [icon]="descriptionBanner.icon" label="Odbiór w salonie"
-                                        separator="lub&nbsp;"
+                                        separator="&nbsp;lub&nbsp;"
                                         description=" dostawa pod dom!"></flexmile-banner-list>
                 </div>
               </div>
