--- a/src/app/_components/offer-new/_components/offer-order/offer-order.html
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.html
@@ -24,7 +24,7 @@
           </h2>
           <span>
             Jesteś o krok od nowego samochodu!
-            Wypełnij krótki formularz, a nasz doradca potwierdzi dostępność wybranego auta i ustali z Tobą szczegóły wynajmu oraz odbioru.
+            Wypełnij formularz, nasz doradca potwierdzi dostępność wybranego auta i ustali z Tobą szczegóły wynajmu oraz odbioru.
             <br>Złożenie @if (details().attributes.coming_soon) {rezerwacji} @else{zamówienia} jest bezpłatne i nie oznacza jeszcze zawarcia umowy.
             </span>
           <div class="offer-order-details">
