--- a/src/app/_components/home-page/_components/why-us/why-us.html
+++ b/src/app/_components/home-page/_components/why-us/why-us.html
@@ -2,10 +2,14 @@
   <div class="container borders xlg:pb-7 pb-0 how-it-works" id="how-it-works">
     <div>
       <div class="flex justify-content-center py-7">
-        <svg xmlns="http://www.w3.org/2000/svg" id="Warstwa_1" version="1.1" viewBox="0 0 1295.6 239.9" style="max-height: 80px;">
-          <path class="st0" fill="#c1d342" d="M1144.1,69.6c19.9,0,35.9,4.1,48,12.2,12.3,8.2,21.1,19.7,26.4,34.5,5.2,14.6,7.1,32.1,5.7,52.4h-124.3c1.1,5,2.6,9.6,4.7,13.8,4.4,8.4,10.4,14.9,17.9,19.5,7.5,4.4,16.2,6.6,26,6.6,17.8,0,32.9-6.4,45.5-19.1l21.7,21.6c-8.4,9.2-18.5,16.3-30.4,21.3-11.9,5-25.2,7.5-39.8,7.5s-32.8-3.6-45.8-10.7c-12.8-7.3-22.8-17.3-30.1-29.8-7.1-12.8-10.7-27.6-10.7-44.6s3.6-31.8,10.7-44.6c7.3-12.8,17.4-22.7,30.1-29.8,13-7.1,27.8-10.8,44.5-11ZM1021.7,238.5h-40.8V5.7h40.8v232.8ZM928.9,238.5h-40.8V71.2h40.8v167.2ZM781.4,69.6c12.5,0,23.3,2.6,32.3,7.8,9.2,5.2,16.3,12.7,21.3,22.3,5,9.4,7.5,20.8,7.5,34.2v104.5h-41.1v-93.5c0-12.3-3.2-22-9.7-28.9-6.5-6.9-15.5-10.4-27-10.4-13.2.2-23.5,5.1-31.1,14.7-7.3,9.1-11.1,20.5-11.3,34.1v1.3s0,82.5,0,82.5h-41.1v-93.5c0-12.3-3.2-22-9.7-28.9-6.3-6.9-15.2-10.4-26.7-10.4-13.2.2-23.6,5.1-31.4,14.7-7.3,9.1-11.1,20.5-11.3,34.1v1.3s0,82.5,0,82.5h-40.8V71.1h40.8v30.3c5.4-10.1,12.7-17.7,21.6-22.8,10.7-6.1,23.1-9.1,37.3-9.1s23.6,2.6,32.6,7.8c9.2,5.2,16.2,12.7,21,22.3,1.6,2.9,2.9,6.1,4,9.4.3-.8.7-1.7,1.1-2.5,5.6-12.8,13.7-22.1,24.2-27.9,10.5-6.1,22.9-9.1,37.3-9.1ZM1144.7,100c-9.4,0-17.6,2.2-24.5,6.6-6.9,4.4-12.3,10.6-16.3,18.5-2.4,5.1-4.1,10.8-4.9,16.9h88.4c-.4-8.8-2.4-16.2-6-22.3-3.6-6.3-8.6-11.1-15.1-14.4-6.3-3.6-13.5-5.3-21.7-5.3ZM908.2,0c6.7,0,12.2,2.2,16.6,6.6,4.4,4.4,6.6,9.9,6.6,16.6s-2.2,12-6.6,16.6c-4.4,4.4-9.9,6.6-16.6,6.6s-11.9-2.2-16.3-6.6c-4.4-4.6-6.6-10.1-6.6-16.6s2.2-12.2,6.6-16.6c4.4-4.4,9.8-6.6,16.3-6.6Z"/>
-          <path class="st1" fill="#863087" d="M276.9,69.6c19.9,0,35.9,4.1,48,12.2,12.3,8.2,21.1,19.7,26.4,34.5,5.2,14.6,7.1,32.1,5.6,52.4h-124.3c1,5,2.6,9.6,4.7,13.8,4.4,8.4,10.4,14.9,17.9,19.5,7.5,4.4,16.2,6.6,26,6.6,17.8,0,32.9-6.4,45.5-19.1l21.6,21.6c-8.4,9.2-18.5,16.3-30.4,21.3-11.9,5-25.2,7.5-39.8,7.5s-32.8-3.6-45.8-10.7c-12.8-7.3-22.8-17.3-30.1-29.8-7.1-12.8-10.7-27.6-10.7-44.6s3.6-31.8,10.7-44.6c7.3-12.8,17.4-22.7,30.1-29.8,13-7.1,27.8-10.8,44.6-11ZM59.6,3.7c5.2,0,10.5.7,15.7,2.2,5.4,1.3,10.5,3,15.1,5.3l-7.2,31.1c-3.1-1.3-6.5-2.4-10-3.5-3.6-1-7.1-1.6-10.7-1.6-3.8-.2-7.3.5-10.7,2.2-3.3,1.5-6.1,3.9-8.2,7.2-1.9,3.1-2.8,7.3-2.8,12.6v22.6c14.8-5.4,30.8-8.4,47.5-8.4v34.3c-17.3,0-33.5,4.2-47.5,11.6v119.1H0V61.5c0-13,2.8-23.7,8.5-32.3,5.6-8.6,13-15,22-19.1,9-4.2,18.7-6.3,29.2-6.3ZM154.4,238.4h-40.8V5.6h40.8v232.8ZM447.2,126.6l35.8-55.5h44.9l-53.3,81.6,57.1,85.7h-47.1l-37.3-59.9-40.5,59.9h-45.5l58.7-85.7-54.6-81.6h47.1l34.8,55.5ZM277.6,100c-9.4,0-17.6,2.2-24.5,6.6-6.9,4.4-12.3,10.6-16.3,18.5-2.4,5.1-4.1,10.8-4.9,16.9h88.4c-.4-8.8-2.4-16.2-6-22.3-3.6-6.3-8.6-11.1-15.1-14.4-6.3-3.6-13.5-5.3-21.6-5.3Z"/>
-          <path class="st1" fill="#863087" d="M1257.5,35.1h8.5l10.6,21.2,10.5-21.2h8.5v34h-6.9v-23.4l-9.7,20h-4.9l-9.7-20v23.4h-6.9v-34Z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" id="Warstwa_1" version="1.1" viewBox="0 0 1295.6 239.9"
+             style="max-height: 80px;">
+          <path class="st0" fill="#c1d342"
+                d="M1144.1,69.6c19.9,0,35.9,4.1,48,12.2,12.3,8.2,21.1,19.7,26.4,34.5,5.2,14.6,7.1,32.1,5.7,52.4h-124.3c1.1,5,2.6,9.6,4.7,13.8,4.4,8.4,10.4,14.9,17.9,19.5,7.5,4.4,16.2,6.6,26,6.6,17.8,0,32.9-6.4,45.5-19.1l21.7,21.6c-8.4,9.2-18.5,16.3-30.4,21.3-11.9,5-25.2,7.5-39.8,7.5s-32.8-3.6-45.8-10.7c-12.8-7.3-22.8-17.3-30.1-29.8-7.1-12.8-10.7-27.6-10.7-44.6s3.6-31.8,10.7-44.6c7.3-12.8,17.4-22.7,30.1-29.8,13-7.1,27.8-10.8,44.5-11ZM1021.7,238.5h-40.8V5.7h40.8v232.8ZM928.9,238.5h-40.8V71.2h40.8v167.2ZM781.4,69.6c12.5,0,23.3,2.6,32.3,7.8,9.2,5.2,16.3,12.7,21.3,22.3,5,9.4,7.5,20.8,7.5,34.2v104.5h-41.1v-93.5c0-12.3-3.2-22-9.7-28.9-6.5-6.9-15.5-10.4-27-10.4-13.2.2-23.5,5.1-31.1,14.7-7.3,9.1-11.1,20.5-11.3,34.1v1.3s0,82.5,0,82.5h-41.1v-93.5c0-12.3-3.2-22-9.7-28.9-6.3-6.9-15.2-10.4-26.7-10.4-13.2.2-23.6,5.1-31.4,14.7-7.3,9.1-11.1,20.5-11.3,34.1v1.3s0,82.5,0,82.5h-40.8V71.1h40.8v30.3c5.4-10.1,12.7-17.7,21.6-22.8,10.7-6.1,23.1-9.1,37.3-9.1s23.6,2.6,32.6,7.8c9.2,5.2,16.2,12.7,21,22.3,1.6,2.9,2.9,6.1,4,9.4.3-.8.7-1.7,1.1-2.5,5.6-12.8,13.7-22.1,24.2-27.9,10.5-6.1,22.9-9.1,37.3-9.1ZM1144.7,100c-9.4,0-17.6,2.2-24.5,6.6-6.9,4.4-12.3,10.6-16.3,18.5-2.4,5.1-4.1,10.8-4.9,16.9h88.4c-.4-8.8-2.4-16.2-6-22.3-3.6-6.3-8.6-11.1-15.1-14.4-6.3-3.6-13.5-5.3-21.7-5.3ZM908.2,0c6.7,0,12.2,2.2,16.6,6.6,4.4,4.4,6.6,9.9,6.6,16.6s-2.2,12-6.6,16.6c-4.4,4.4-9.9,6.6-16.6,6.6s-11.9-2.2-16.3-6.6c-4.4-4.6-6.6-10.1-6.6-16.6s2.2-12.2,6.6-16.6c4.4-4.4,9.8-6.6,16.3-6.6Z"/>
+          <path class="st1" fill="#863087"
+                d="M276.9,69.6c19.9,0,35.9,4.1,48,12.2,12.3,8.2,21.1,19.7,26.4,34.5,5.2,14.6,7.1,32.1,5.6,52.4h-124.3c1,5,2.6,9.6,4.7,13.8,4.4,8.4,10.4,14.9,17.9,19.5,7.5,4.4,16.2,6.6,26,6.6,17.8,0,32.9-6.4,45.5-19.1l21.6,21.6c-8.4,9.2-18.5,16.3-30.4,21.3-11.9,5-25.2,7.5-39.8,7.5s-32.8-3.6-45.8-10.7c-12.8-7.3-22.8-17.3-30.1-29.8-7.1-12.8-10.7-27.6-10.7-44.6s3.6-31.8,10.7-44.6c7.3-12.8,17.4-22.7,30.1-29.8,13-7.1,27.8-10.8,44.6-11ZM59.6,3.7c5.2,0,10.5.7,15.7,2.2,5.4,1.3,10.5,3,15.1,5.3l-7.2,31.1c-3.1-1.3-6.5-2.4-10-3.5-3.6-1-7.1-1.6-10.7-1.6-3.8-.2-7.3.5-10.7,2.2-3.3,1.5-6.1,3.9-8.2,7.2-1.9,3.1-2.8,7.3-2.8,12.6v22.6c14.8-5.4,30.8-8.4,47.5-8.4v34.3c-17.3,0-33.5,4.2-47.5,11.6v119.1H0V61.5c0-13,2.8-23.7,8.5-32.3,5.6-8.6,13-15,22-19.1,9-4.2,18.7-6.3,29.2-6.3ZM154.4,238.4h-40.8V5.6h40.8v232.8ZM447.2,126.6l35.8-55.5h44.9l-53.3,81.6,57.1,85.7h-47.1l-37.3-59.9-40.5,59.9h-45.5l58.7-85.7-54.6-81.6h47.1l34.8,55.5ZM277.6,100c-9.4,0-17.6,2.2-24.5,6.6-6.9,4.4-12.3,10.6-16.3,18.5-2.4,5.1-4.1,10.8-4.9,16.9h88.4c-.4-8.8-2.4-16.2-6-22.3-3.6-6.3-8.6-11.1-15.1-14.4-6.3-3.6-13.5-5.3-21.6-5.3Z"/>
+          <path class="st1" fill="#863087"
+                d="M1257.5,35.1h8.5l10.6,21.2,10.5-21.2h8.5v34h-6.9v-23.4l-9.7,20h-4.9l-9.7-20v23.4h-6.9v-34Z"/>
           <path class="st1" fill="#863087" d="M1225,35.1h28.4v6.3h-10.4v27.7h-7.7v-27.7h-10.3v-6.3Z"/>
         </svg>
       </div>
@@ -145,7 +149,7 @@
           <h2>Spełniamy Wasze <br> moto marzenia!</h2>
           <span>Dzięki Flexmile zyskujesz dostęp do najnowszych modeli, nowych samochodów. <br> Wybierz auto, które pasuje do Ciebie — komfortowo, szybko i na <br> własnych zasadach.</span>
           <div>
-            <flexmile-button label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
+            <flexmile-button (clicked)="goToOffer()" label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
                              btnClass="mr-3 w-full xlg:w-auto"></flexmile-button>
           </div>
         </div>
@@ -259,10 +263,12 @@
       </div>
       <div class="cars">
         <div class="left">
-          <img src="/layout/images/left_car.webp" alt="Samochody do wynajmu Flexmile - nowoczesna flota pojazdów" loading="lazy">
+          <img src="/layout/images/left_car.webp" alt="Samochody do wynajmu Flexmile - nowoczesna flota pojazdów"
+               loading="lazy">
         </div>
         <div class="right">
-          <img src="/layout/images/right_car.webp" alt="Wynajem samochodów dla firm Flexmile - szeroka oferta pojazdów" loading="lazy">
+          <img src="/layout/images/right_car.webp" alt="Wynajem samochodów dla firm Flexmile - szeroka oferta pojazdów"
+               loading="lazy">
         </div>
       </div>
     </div>
