--- a/src/app/_components/utilities/header/header.scss
+++ b/src/app/_components/utilities/header/header.scss
@@ -8,6 +8,10 @@
   transition: all 0.3s ease-in-out;
   z-index: 1001;
   background: #863087;
+  @include mixins.media-query('max', 'xl') {
+    padding-top: 1.5rem !important;
+    padding-bottom: 1.5rem !important;
+  }
 
   &--logo {
     @include mixins.media-query('max', 'xl') {
@@ -165,7 +169,7 @@
 
       li {
         @include mixins.media-query('max', 'xl') {
-          &:last-child{
+          &:last-child {
             margin-top: auto;
             width: 100%;
             border-top: 1px solid var(--color-purple-700);
@@ -173,7 +177,8 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            a{
+
+            a {
               display: flex;
               align-items: center;
               justify-content: flex-start;
@@ -181,6 +186,7 @@
             }
           }
         }
+
         span {
           color: var(--color-white);
           transition: all 0.3s ease-in-out;
