--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -49,13 +49,10 @@
                       {{ getFuelLabel(details().fuel_type) }}
                     </div>
                     <div>
-                      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none">
                         <path
-                          d="M15.5254 0C16.9032 0.000206925 17.9998 1.0968 18 2.47461C18 3.62757 17.1845 4.61194 16.0879 4.86523V9C16.0879 9.30924 15.8346 9.56229 15.5254 9.5625H9.5625V13.1348C10.6593 13.3879 11.4746 14.3723 11.4746 15.5254C11.4744 16.9033 10.378 18 9 18C7.62201 18 6.5256 16.8752 6.52539 15.5254C6.52539 14.3723 7.34067 13.3879 8.4375 13.1348V9.5625H3.03711V13.1348C4.13398 13.3879 4.9502 14.3723 4.9502 15.5254C4.94999 16.9033 3.8526 18 2.47461 18C1.0968 17.9998 0.000206924 16.9032 0 15.5254C0 14.3724 0.815465 13.3881 1.91211 13.1348V4.86523C0.815465 4.61194 0 3.62757 0 2.47461C0.000207304 1.0968 1.0968 0.000207304 2.47461 0C3.8526 0 4.94998 1.12478 4.9502 2.47461C4.9502 3.62773 4.13398 4.61211 3.03711 4.86523V8.4375H8.4375V4.86523C7.34067 4.61208 6.52539 3.6277 6.52539 2.47461C6.5256 1.09667 7.65013 0 9 0C10.3499 0 11.4744 1.09667 11.4746 2.47461C11.4746 3.6277 10.6593 4.61208 9.5625 4.86523V8.4375H14.9629V4.86523C13.866 4.61211 13.0498 3.62773 13.0498 2.47461C13.05 1.09667 14.1474 0 15.5254 0ZM2.47461 14.1748C1.71542 14.175 1.125 14.7943 1.125 15.5254C1.12519 16.2846 1.68802 16.875 2.44727 16.875C3.20632 16.8748 3.79667 16.2563 3.79688 15.5254C3.79688 14.7941 3.23398 14.1748 2.47461 14.1748ZM9 14.1748C8.24063 14.1748 7.65039 14.7941 7.65039 15.5254C7.65059 16.2846 8.24076 16.875 9 16.875C9.75924 16.875 10.3494 16.2565 10.3496 15.5254C10.3496 14.7941 9.75937 14.1748 9 14.1748ZM2.47461 1.125C1.71555 1.1252 1.1252 1.71555 1.125 2.47461C1.125 3.20573 1.71542 3.82498 2.47461 3.8252C3.23398 3.8252 3.8252 3.20586 3.8252 2.47461C3.82499 1.71542 3.23385 1.125 2.47461 1.125ZM9 1.125C8.26888 1.125 7.6506 1.71542 7.65039 2.47461C7.65039 3.20586 8.24063 3.8252 9 3.8252C9.75937 3.8252 10.3496 3.20586 10.3496 2.47461C10.3494 1.71542 9.73112 1.125 9 1.125ZM15.5254 1.09668C14.766 1.09668 14.1748 1.71602 14.1748 2.44727C14.175 3.20645 14.7943 3.79688 15.5254 3.79688C16.2846 3.79667 16.875 3.20573 16.875 2.47461C16.8748 1.71554 16.2844 1.09689 15.5254 1.09668Z"
+                          d="M24 3.3C24 1.4625 22.5375 0 20.7 0C18.8625 0 17.4 1.4625 17.4 3.3C17.4 4.8375 18.4875 6.15 19.95 6.4875V11.25H12.75V6.4875C14.2125 6.15 15.3 4.8375 15.3 3.3C15.3 1.4625 13.8 0 12 0C10.2 0 8.7 1.4625 8.7 3.3C8.7 4.8375 9.7875 6.15 11.25 6.4875V11.25H4.05V6.4875C5.5125 6.15 6.6 4.8375 6.6 3.3C6.6 1.5 5.1375 0 3.3 0C1.4625 0 0 1.4625 0 3.3C0 4.8375 1.0875 6.15 2.55 6.4875V17.5125C1.0875 17.85 0 19.1625 0 20.7C0 22.5375 1.4625 24 3.3 24C5.1375 24 6.6 22.5375 6.6 20.7C6.6 19.1625 5.5125 17.85 4.05 17.5125V12.75H11.25V17.5125C9.7875 17.85 8.7 19.1625 8.7 20.7C8.7 22.5 10.1625 24 12 24C13.8375 24 15.3 22.5375 15.3 20.7C15.3 19.1625 14.2125 17.85 12.75 17.5125V12.75H20.7C21.1125 12.75 21.45 12.4125 21.45 12V6.4875C22.9125 6.15 24 4.8375 24 3.3ZM1.5 3.3C1.5 2.2875 2.2875 1.5 3.3 1.5C4.3125 1.5 5.1 2.2875 5.1 3.3C5.1 4.275 4.3125 5.1 3.3 5.1C2.2875 5.1 1.5 4.275 1.5 3.3ZM5.0625 20.7C5.0625 21.675 4.275 22.5 3.2625 22.5C2.25 22.5 1.5 21.7125 1.5 20.7C1.5 19.725 2.2875 18.9 3.3 18.9C4.3125 18.9 5.0625 19.725 5.0625 20.7ZM10.2 3.3C10.2 2.2875 11.025 1.5 12 1.5C12.975 1.5 13.8 2.2875 13.8 3.3C13.8 4.275 13.0125 5.1 12 5.1C10.9875 5.1 10.2 4.275 10.2 3.3ZM13.8 20.7C13.8 21.675 13.0125 22.5 12 22.5C10.9875 22.5 10.2 21.7125 10.2 20.7C10.2 19.725 10.9875 18.9 12 18.9C13.0125 18.9 13.8 19.725 13.8 20.7ZM20.7 5.0625C19.725 5.0625 18.9 4.275 18.9 3.2625C18.9 2.2875 19.6875 1.4625 20.7 1.4625C21.7125 1.4625 22.5 2.2875 22.5 3.3C22.5 4.275 21.7125 5.0625 20.7 5.0625Z"
                           fill="#863087"/>
-                        <path
-                          d="M15.5254 0C16.9032 0.000206925 17.9998 1.0968 18 2.47461C18 3.62757 17.1845 4.61194 16.0879 4.86523V9C16.0879 9.30924 15.8346 9.56229 15.5254 9.5625H9.5625V13.1348C10.6593 13.3879 11.4746 14.3723 11.4746 15.5254C11.4744 16.9033 10.378 18 9 18C7.62201 18 6.5256 16.8752 6.52539 15.5254C6.52539 14.3723 7.34067 13.3879 8.4375 13.1348V9.5625H3.03711V13.1348C4.13398 13.3879 4.9502 14.3723 4.9502 15.5254C4.94999 16.9033 3.8526 18 2.47461 18C1.0968 17.9998 0.000206924 16.9032 0 15.5254C0 14.3724 0.815465 13.3881 1.91211 13.1348V4.86523C0.815465 4.61194 0 3.62757 0 2.47461C0.000207304 1.0968 1.0968 0.000207304 2.47461 0C3.8526 0 4.94998 1.12478 4.9502 2.47461C4.9502 3.62773 4.13398 4.61211 3.03711 4.86523V8.4375H8.4375V4.86523C7.34067 4.61208 6.52539 3.6277 6.52539 2.47461C6.5256 1.09667 7.65013 0 9 0C10.3499 0 11.4744 1.09667 11.4746 2.47461C11.4746 3.6277 10.6593 4.61208 9.5625 4.86523V8.4375H14.9629V4.86523C13.866 4.61211 13.0498 3.62773 13.0498 2.47461C13.05 1.09667 14.1474 0 15.5254 0ZM2.47461 14.1748C1.71542 14.175 1.125 14.7943 1.125 15.5254C1.12519 16.2846 1.68802 16.875 2.44727 16.875C3.20632 16.8748 3.79667 16.2563 3.79688 15.5254C3.79688 14.7941 3.23398 14.1748 2.47461 14.1748ZM9 14.1748C8.24063 14.1748 7.65039 14.7941 7.65039 15.5254C7.65059 16.2846 8.24076 16.875 9 16.875C9.75924 16.875 10.3494 16.2565 10.3496 15.5254C10.3496 14.7941 9.75937 14.1748 9 14.1748ZM2.47461 1.125C1.71555 1.1252 1.1252 1.71555 1.125 2.47461C1.125 3.20573 1.71542 3.82498 2.47461 3.8252C3.23398 3.8252 3.8252 3.20586 3.8252 2.47461C3.82499 1.71542 3.23385 1.125 2.47461 1.125ZM9 1.125C8.26888 1.125 7.6506 1.71542 7.65039 2.47461C7.65039 3.20586 8.24063 3.8252 9 3.8252C9.75937 3.8252 10.3496 3.20586 10.3496 2.47461C10.3494 1.71542 9.73112 1.125 9 1.125ZM15.5254 1.09668C14.766 1.09668 14.1748 1.71602 14.1748 2.44727C14.175 3.20645 14.7943 3.79688 15.5254 3.79688C16.2846 3.79667 16.875 3.20573 16.875 2.47461C16.8748 1.71554 16.2844 1.09689 15.5254 1.09668Z"
-                          stroke="#863087"/>
                       </svg>
                       {{ getTransmissionLabel(details().specs.transmission) }}
                     </div>
@@ -97,12 +94,12 @@
             </div>
             @if (screen.isLowerThanTablet()) {
               <div class="offer__body-form">
-                <div class="header-wrapper pb-4 mb-4">
+                <div class="header-wrapper pb-3 mb-3">
                   <h3 class="block">Wybierz ofertę najmu idealną dla Twojej firmy!</h3>
                 </div>
                 <div class="block">
                   <div>
-                    <div class="xlg:pb-5 pb-4">
+                    <div class="pb-4">
                       <div class="pb-2">Czas trwania umowy <span>(w miesiącach)</span></div>
                       <div class="periods flex gap-2 flex-wrap">
                         @for (period of details().pricing.rental_periods; track period) {
@@ -112,7 +109,7 @@
                         }
                       </div>
                     </div>
-                    <div class="xlg:pb-5 pb-4">
+                    <div class="pb-4">
                       <div class="pb-2">Roczny limit kilometrów <span>(tys. km)</span></div>
                       <div class="mileage flex gap-2 flex-wrap">
                         @for (limit of details().pricing.mileage_limits; track limit) {
@@ -122,7 +119,7 @@
                         }
                       </div>
                     </div>
-                    <div class="xlg:pb-5 pb-4">
+                    <div class="pb-4">
                       <div class="pb-2">Opłata początkowa</div>
                       <div class="initial-payment flex gap-2 flex-wrap">
                         @for (initialPayment of details().pricing.initial_payments; track initialPayment) {
@@ -137,7 +134,7 @@
                       <div class="p">{{ offerService.calculatedPrice | number:'1.0-0' }} PLN
                         <span>/netto mies.</span>
                       </div>
-                      <div class="price-info xlg:pb-5 pb-4"
+                      <div class="price-info pb-4"
                            [ngClass]="{'opacity-0' : offerService.selectedInitialPayment !== 0}">
                         <b>0 zł</b> wpłaty na start!
                       </div>
@@ -303,12 +300,12 @@
         @if (!screen.isLowerThanTablet()) {
           <div class="offer-details-container-r">
             <div class="offer__body-form">
-              <div class="header-wrapper pb-4 mb-4">
+              <div class="header-wrapper pb-3 mb-3">
                 <h3 class="block">Wybierz ofertę najmu idealną dla Twojej firmy!</h3>
               </div>
               <div class="block">
                 <div>
-                  <div class="xlg:pb-5 pb-4">
+                  <div class="pb-4">
                     <div class="pb-2">Czas trwania umowy <span>(w miesiącach)</span></div>
                     <div class="periods flex gap-2 flex-wrap">
                       @for (period of details().pricing.rental_periods; track period) {
@@ -318,7 +315,7 @@
                       }
                     </div>
                   </div>
-                  <div class="xlg:pb-5 pb-4">
+                  <div class="pb-4">
                     <div class="pb-2">Roczny limit kilometrów <span>(tys. km)</span></div>
                     <div class="mileage flex gap-2 flex-wrap">
                       @for (limit of details().pricing.mileage_limits; track limit) {
@@ -328,7 +325,7 @@
                       }
                     </div>
                   </div>
-                  <div class="xlg:pb-5 pb-4">
+                  <div class="pb-4">
                     <div class="pb-2">Opłata początkowa</div>
                     <div class="initial-payment flex gap-2 flex-wrap">
                       @for (initialPayment of details().pricing.initial_payments; track initialPayment) {
@@ -342,7 +339,7 @@
                     <div class="p">{{ offerService.calculatedPrice | number:'1.0-0' }} PLN
                       <span>/netto mies.</span>
                     </div>
-                    <div class="price-info xlg:pb-5 pb-4"
+                    <div class="price-info pb-4"
                          [ngClass]="{'opacity-0' : offerService.selectedInitialPayment !== 0}">
                       <b>0 zł</b> wpłaty na start!
                     </div>
