--- a/src/app/_components/offer-new/_components/offer-order/offer-order.scss
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.scss
@@ -14,9 +14,14 @@
 
 .offer-order {
   padding-bottom: 120px;
-.__loading{
-  position: fixed;
-}
+  @include mixins.media-query('max', 'xl') {
+    padding-bottom: 0;
+  }
+
+  .__loading {
+    position: fixed;
+  }
+
   .radios {
     label {
       color: #525252;
@@ -90,13 +95,16 @@
       max-width: unset;
       min-width: unset;
     }
+
     & > div {
       background: var(--color-black-50);
       border-radius: var(--border-radius-base);
       position: sticky;
       top: 160px;
       @include mixins.media-query('max', 'xl') {
-        border-radius:0;
+        border-radius: 0;
+        position: static;
+        top: unset;
       }
 
       .right_label {
@@ -157,6 +165,7 @@
         @include mixins.media-query('max', 'xl') {
           max-height: unset;
         }
+
         img {
           display: inline-block;
           max-width: 100%;
