zmiany / fixy / poprawki

--- a/src/app/_components/utilities/car/car.html
+++ b/src/app/_components/utilities/car/car.html
@@ -81,12 +81,15 @@
 
 <ng-template #offerFeatures>
   <div class="car-card__features" (click)="showFeatures($event)">
-    <div class="car-card__feature-label hidden xl:flex">
-      Usługi w cenie:
-    </div>
-    <div class="car-card__feature-label flex xl:hidden">
-      W cenie:
-    </div>
+    @if (cardSize() !== badgeSizes.LG) {
+      <div class="car-card__feature-label hidden xl:flex">
+        Usługi w cenie:
+      </div>
+      <div class="car-card__feature-label flex xl:hidden">
+        W cenie:
+      </div>
+    }
+
     @if (screen.isMobile()) {
       <ng-container *ngTemplateOutlet="mobileFeatures"></ng-container>
     } @else {
