--- a/src/app/_components/home-page/_components/why-us/why-us.scss
+++ b/src/app/_components/home-page/_components/why-us/why-us.scss
@@ -164,7 +164,7 @@
       align-items: center;
       justify-content: space-between;
       width: 1600px;
-      margin: -105px auto 0 auto;
+      margin: -105px 0 0 0;
       position: relative;
       right: -50%;
       transform: translateX(-50%);
