--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -14,7 +14,8 @@
             <div class="offer__body xlg:pb-7 pb-4">
               <div class="offer__body-info xxl:pr-7">
                 <div class="offer__body-info-header">
-                  <div class="flex xxxl:align-items-center align-items-start justify-content-between pb-2 xxxl:flex-row flex-column">
+                  <div
+                    class="flex xxxl:align-items-center align-items-start justify-content-between pb-2 xxxl:flex-row flex-column">
                     <h1>{{ details().brand.name }} {{ details().model }}</h1>
                     @if (!screen.isMobile()) {
                       <div class="flex gap-2">
@@ -95,7 +96,7 @@
             @if (screen.isLowerThanTablet()) {
               <div class="offer__body-form">
                 <div class="header-wrapper pb-3 mb-3">
-                  <h3 class="block">Wybierz ofertę najmu idealną dla Twojej firmy!</h3>
+                  <h3 class="block">Dopasuj najem do Twojej firmy!</h3>
                 </div>
                 <div class="block">
                   <div>
@@ -301,7 +302,7 @@
           <div class="offer-details-container-r">
             <div class="offer__body-form">
               <div class="header-wrapper pb-3 mb-3">
-                <h3 class="block">Wybierz ofertę najmu idealną dla Twojej firmy!</h3>
+                <h3 class="block">Dopasuj najem do Twojej firmy!</h3>
               </div>
               <div class="block">
                 <div>
