--- a/src/app/_components/terms-conditions/terms-conditions.html
+++ b/src/app/_components/terms-conditions/terms-conditions.html
@@ -115,8 +115,9 @@
       <p>
         <b>NEXT-CAR</b><br>
         Łukasz Arabas<br>
-        Al. Jana Pawła II 27<br>
-        00-867 Warszawa<br>
+        Zgodny z wpisem do CEIDG<br>
+        NIP: 548-215-31-75<br>
+        REGON: 120539074<br>
         Tel.:
         <flexmile-link [title]="'539-799-000'" [url]="'tel:+48539799000'"></flexmile-link>
         <br>
